--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,3 @@
-# Starter pipeline
-
 trigger:
   - main
 
@@ -14,30 +12,27 @@ variables:
   NAMESPACE: 'default'
 
 steps:
-  # ✅ Install Java 17 (Fixed Issue)
-  - task: JavaToolInstaller@0
+  - task: UseJavaVersion@1
     inputs:
       versionSpec: '17'
       jdkArchitecture: 'x64'
-      jdkSource: 'PreInstalled'
-    displayName: 'Install Java 17'
+    displayName: 'Set Java 17'
 
-  # ✅ Run Maven Build
+  - script: java -version
+    displayName: 'Check Java Version'
+
   - task: Maven@3
     inputs:
       mavenPomFile: 'pom.xml'
       goals: 'clean package'
       publishJUnitResults: false
-    displayName: 'Maven Build'
 
-  # ✅ Build and Push Docker Image
   - script: |
       docker build -t $(ACR_NAME).azurecr.io/$(IMAGE_NAME):latest .
       az acr login --name $(ACR_NAME)
       docker push $(ACR_NAME).azurecr.io/$(IMAGE_NAME):latest
     displayName: 'Build and Push Docker Image'
 
-  # ✅ Deploy to AKS
   - task: KubernetesManifest@1
     inputs:
       action: 'deploy'
