fixing name mismatch for deployment file from yaml to yml as of with the file extension

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,5 +42,5 @@ steps:
       action: 'deploy'
       kubernetesServiceConnection: 'my-k8s-connection'
       namespace: '$(NAMESPACE)'
-      manifests: 'deployment.yaml'
+      manifests: 'deployment.yml'
     displayName: 'Deploy to AKS'
